--- a/index2.html
+++ b/index2.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
-    <link href="css2/estilo.css" rel="stylesheet">
+    <link href="css/estilo.css" rel="stylesheet" type="text/css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta charset="author" content="jonatas thauan">
